# rust-vs-bun

./: Cargo.toml  README.md  Rocket.toml  app.ts
