[package]
name = "rust-vs-bun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
hyper = { version = "0.14.20", features = ["full"] }
tokio = { version = "1", features = ["full"] }
rocket = "0.5.0-rc.2"
actix-http = "3.2.2"
actix-service = "2.0.2"
jemallocator = "0.5.0"
salvo = "0.35.2"
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git" }
xitca-web = "0.1"
xitca-http="0.1"
xitca-server="0.1"
xitca-service="0.1"
[patch.crates-io]
xitca-http = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-io = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-unsafe-collection = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-service = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-server = { git = "https://github.com/HFQR/xitca-web.git" }
xitca-web = { git = "https://github.com/HFQR/xitca-web.git" }
